[tool.poetry]
name = "tsukudani"
version = "0.1.0"
description = "Simmering kombu and gevent together"
authors = ["mdomans <mdomans@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
