[tool.poetry]
name = "tsukudani"
version = "0.1.0"
description = "Simmering kombu and gevent together - exploration into if slimmer smaller custom gevent worker for celery can be written de novo"
authors = ["mdomans <mdomans@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
kombu = "^5.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
